Refactor quiz app to use class-based structure and update styles
Refactored assets/app.js to use a QuizApp class for better state management and modularity, replacing global functions and variables. Improved slider and quiz logic, navigation, and UI event binding. Updated assets/style.css to remove box-shadows, adjust button and slider styles, and enhance layout consistency. Modified index.html to streamline header structure and improve session customization layout.

--- a/index.html
+++ b/index.html
@@ -43,14 +43,11 @@
                         <path d="M12 19l-7-7 7-7"></path>
                     </svg>
                 </button>
+                <h1 class="page-title" id="selectedSubjectTitle">Subject</h1>
             </div>
 
-            <header class="page-header">
-                <h1 class="page-title" id="selectedSubjectTitle">Subject</h1>
-                <p class="page-description">Customize your session.</p>
-            </header>
-
             <div class="options-block">
+                <p class="page-description" style="margin-bottom: 24px;">Customize your session.</p>
                 <div class="slider-wrapper">
                     <div class="count-display-group">
                         <div class="slider-value-display">
