Add flag question feature
Introduces the ability for users to flag questions during final correction mode. Adds a flag button to the UI, updates the navigator to visually indicate flagged questions, and includes corresponding CSS for styling the flag button and flagged navigator dots.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,17 @@
                     <div class="question-meta">
                         <span class="q-number">Question <span id="currentQuestion">1</span>/<span
                                 id="totalQuestions">10</span></span>
-                        <span class="q-id" id="questionIdDisplay"></span>
+                        <div style="display: flex; gap: 12px; align-items: center;">
+                            <button id="btnFlagQuestion" class="btn-flag hidden" aria-label="Flag Question"
+                                onclick="toggleFlag()">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"></path>
+                                    <line x1="4" y1="22" x2="4" y2="15"></line>
+                                </svg>
+                            </button>
+                            <span class="q-id" id="questionIdDisplay"></span>
+                        </div>
                     </div>
 
                     <h2 class="question-text" id="questionText">Loading...</h2>
