Add shuffle questions toggle to quiz settings
Introduced a toggle switch in the UI to allow users to enable or disable shuffling of quiz questions. Updated the QuizApp logic to respect the shuffle setting, and added corresponding styles for the toggle switch.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
                                 <span id="maxQuestionsLabel">All</span>
                             </div>
                         </div>
+
+                        <div class="toggle-wrapper">
+                            <span class="toggle-label">Shuffle Questions</span>
+                            <label class="toggle-switch">
+                                <input type="checkbox" id="shuffleToggle" checked
+                                    onchange="toggleShuffle(this.checked)">
+                                <span class="toggle-slider"></span>
+                            </label>
+                        </div>
                     </div>
 
                     <!-- Time Mode Section -->
