Add confirmation modal for exiting quiz
Introduces a confirmation dialog when attempting to exit an active quiz to prevent accidental loss of progress. Refactors modal logic to handle both finishing and exiting actions, updates button event handler in index.html, and improves state management for pending confirmation actions.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="quiz-header">
                 <div class="quiz-header-top">
                     <div class="quiz-header-left">
-                        <button class="btn btn-close" id="btnQuizClose" onclick="goHome()"
+                        <button class="btn btn-close" id="btnQuizClose" onclick="attemptCloseQuiz()"
                             aria-label="Exit Quiz">✕</button>
                         <button class="btn btn-close hidden" id="btnReviewBack" onclick="exitReview()"
                             aria-label="Back to Results"
