--- a/dev/question-builder.html
+++ b/dev/question-builder.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev Tool: Question Builder</title>
+    <title>Dev Tool: Question Utility</title>
     <style>
         :root {
             --bg: #f4f4f5;
@@ -166,89 +166,181 @@
         .btn-secondary:hover {
             background: #d4d4d8;
         }
+
+        .tabs {
+            display: flex;
+            margin-bottom: 24px;
+            border-bottom: 2px solid var(--border);
+        }
+
+        .tab-btn {
+            padding: 12px 24px;
+            background: none;
+            border: none;
+            font-size: 1rem;
+            color: var(--text-sec);
+            cursor: pointer;
+            border-bottom: 2px solid transparent;
+            margin-bottom: -2px;
+            font-weight: 500;
+        }
+
+        .tab-btn.active {
+            color: var(--primary);
+            border-bottom-color: var(--primary);
+        }
+
+        .tab-btn:hover:not(.active) {
+            color: var(--text);
+            background: #f4f4f5;
+        }
+
+        .tab-content {
+            display: none;
+        }
+
+        .tab-content.active {
+            display: block;
+        }
     </style>
 </head>
 
 <body>
 
     <div class="container">
-        <h1>Dev Tool: Question Builder</h1>
+        <h1>Dev Tool: Question Utility</h1>
 
-        <div class="legend">
-            <div class="grid">
-                <div>
-                    <strong>Multiple Choice</strong>
-                    <p>Line 2 is simply the <strong>First Option</strong>.</p>
-                    <code>Question Text
+        <div class="tabs">
+            <button class="tab-btn active" onclick="switchTab('builder')">Question Builder</button>
+            <button class="tab-btn" onclick="switchTab('reorder')">Reorder IDs</button>
+        </div>
+
+        <!-- TAB 1: BUILDER -->
+        <div id="tab-builder" class="tab-content active">
+            <div class="legend">
+                <div class="grid">
+                    <div>
+                        <strong>Multiple Choice</strong>
+                        <p>Line 2 is simply the <strong>First Option</strong>.</p>
+                        <code>Question Text
 Option A
 Option B
 Option C
 0
 Explanation (Optional)</code>
-                </div>
-                <div>
-                    <strong>Boolean</strong>
-                    <p>Line 2 must be <strong>'b'</strong>.</p>
-                    <code>Question Text
+                    </div>
+                    <div>
+                        <strong>Boolean</strong>
+                        <p>Line 2 must be <strong>'b'</strong>.</p>
+                        <code>Question Text
 b
 0
 Explanation (Optional)</code>
-                    <p style="font-size: 0.85em; color: var(--text-sec)">0 = True, 1 = False</p>
+                        <p style="font-size: 0.85em; color: var(--text-sec)">0 = True, 1 = False</p>
+                    </div>
                 </div>
+            </div>
+
+            <div class="form-group">
+                <label for="startId">Starting ID (Required)</label>
+                <input type="number" id="startId" min="0" placeholder="ID">
+            </div>
+
+            <div class="form-group">
+                <label for="rawInput">Raw Question Input</label>
+                <textarea id="rawInput" placeholder="Paste your questions here..."></textarea>
+            </div>
+
+            <div id="builder-status" class="status"></div>
+
+            <div class="actions">
+                <button onclick="generateJSON()">Generate & Copy JSON</button>
+                <button class="btn-secondary" onclick="clearBuilderInput()">Clear Input</button>
             </div>
         </div>
 
-        <div class="form-group">
-            <label for="startId">Starting ID (Required)</label>
-            <input type="number" id="startId" min="0" placeholder="ID">
-        </div>
+        <!-- TAB 2: REORDER -->
+        <div id="tab-reorder" class="tab-content">
+            <div class="legend">
+                <p>Paste a JSON array of questions. This tool will sort them by their current ID and reassign sequential
+                    IDs starting from 1.</p>
+                <code>[
+  { "id": 45, ... },
+  { "id": 1, ... }
+]
+->
+[
+  { "id": 1, ... },
+  { "id": 2, ... }
+]</code>
+            </div>
 
-        <div class="form-group">
-            <label for="rawInput">Raw Question Input</label>
-            <textarea id="rawInput" placeholder="Paste your questions here..."></textarea>
-        </div>
+            <div class="form-group">
+                <label for="jsonInput">JSON Input</label>
+                <textarea id="jsonInput" placeholder="Paste JSON array here..."></textarea>
+            </div>
 
-        <div id="status" class="status"></div>
+            <div id="reorder-status" class="status"></div>
 
-        <div class="actions">
-            <button onclick="generateJSON()">Generate & Copy JSON</button>
-            <button class="btn-secondary" onclick="clearInput()">Clear Input</button>
+            <div class="actions">
+                <button onclick="reorderIDs()">Reorder & Copy JSON</button>
+                <button class="btn-secondary" onclick="clearReorderInput()">Clear Input</button>
+            </div>
         </div>
     </div>
 
     <script>
-        function clearInput() {
+        function switchTab(tabName) {
+            document.querySelectorAll('.tab-content').forEach(el => el.classList.remove('active'));
+            document.querySelectorAll('.tab-btn').forEach(el => el.classList.remove('active'));
+            document.getElementById(`tab-${tabName}`).classList.add('active');
+
+            const buttons = document.querySelectorAll('.tab-btn');
+            if (tabName === 'builder') buttons[0].classList.add('active');
+            if (tabName === 'reorder') buttons[1].classList.add('active');
+        }
+
+        function showStatus(elementId, msg, type) {
+            const el = document.getElementById(elementId);
+            el.innerText = msg;
+            el.className = `status ${type}`;
+            el.style.display = 'block';
+        }
+
+        // --- BUILDER LOGIC ---
+        function clearBuilderInput() {
             document.getElementById('rawInput').value = '';
             document.getElementById('startId').value = '';
-            const statusEl = document.getElementById('status');
+            const statusEl = document.getElementById('builder-status');
             statusEl.style.display = 'none';
         }
 
         function generateJSON() {
             const input = document.getElementById('rawInput').value;
             const startIdStr = document.getElementById('startId').value;
-            const statusEl = document.getElementById('status');
+            const statusEl = document.getElementById('builder-status');
 
+            // Just ensure we're targeting the right one in clear calls too
             statusEl.style.display = 'none';
             statusEl.className = 'status';
 
             if (!input.trim()) {
-                showStatus('Please enter some questions.', 'error');
+                showStatus('builder-status', 'Please enter some questions.', 'error');
                 return;
             }
 
             if (!startIdStr.trim()) {
-                showStatus('Please enter a Starting ID.', 'error');
+                showStatus('builder-status', 'Please enter a Starting ID.', 'error');
                 return;
             }
 
             let startId = parseInt(startIdStr);
             if (isNaN(startId) || startId < 0) {
-                showStatus('Invalid Starting ID.', 'error');
+                showStatus('builder-status', 'Invalid Starting ID.', 'error');
                 return;
             }
 
-            // Split by double newlines to separate question blocks
+            // Split by double newlines separate question blocks
             const blocks = input.split(/\n\s*\n/);
             const jsonOutput = [];
             let currentId = startId;
@@ -257,7 +349,6 @@ Explanation (Optional)</code>
             blocks.forEach((block, index) => {
                 if (!block.trim()) return;
 
-                // 1. Get all lines, trimming whitespace
                 const lines = block.split('\n').map(l => l.trim()).filter(l => l !== '');
 
                 if (lines.length < 2) {
@@ -269,17 +360,14 @@ Explanation (Optional)</code>
                 const line2 = lines[1].toLowerCase();
 
                 let type = 'multiple';
-                let contentStartIndex = 1; // Default: Line 1 (2nd line) is content
+                let contentStartIndex = 1;
 
-                // 2. Determine Type
-                // If Line 2 is exactly 'b', it's Boolean and content starts after it.
-                // Otherwise, it's Multiple Choice and Line 2 is the first option.
                 if (line2 === 'b') {
                     type = 'boolean';
-                    contentStartIndex = 2; // Line 0=Q, Line 1='b', Line 2=AnswerIndex
+                    contentStartIndex = 2;
                 } else {
                     type = 'multiple';
-                    contentStartIndex = 1; // Line 0=Q, Line 1=Option A
+                    contentStartIndex = 1;
                 }
 
                 let questionObj = {
@@ -288,20 +376,17 @@ Explanation (Optional)</code>
                     question: questionText
                 };
 
-                // Extract content based on determined start index
                 const contentLines = lines.slice(contentStartIndex);
 
                 if (type === 'multiple') {
                     if (contentLines.length < 3) {
-                        // Need at least 2 options + 1 answer index
                         errors.push(`Question ${index + 1}: Insufficient content for multiple choice.`);
                         return;
                     }
 
-                    // Find answer index line (standalone number)
                     let answerIndex = -1;
                     let optionLines = [];
-                    let foundAnswerLineIndex = -1; // relative to contentLines
+                    let foundAnswerLineIndex = -1;
 
                     for (let i = 0; i < contentLines.length; i++) {
                         if (/^\d+$/.test(contentLines[i])) {
@@ -330,14 +415,11 @@ Explanation (Optional)</code>
                     questionObj.options = optionLines;
                     questionObj.answer = answerIndex;
 
-                    // Explanation (lines after answer index)
                     if (foundAnswerLineIndex + 1 < contentLines.length) {
                         questionObj.explanation = contentLines.slice(foundAnswerLineIndex + 1).join(' ');
                     }
 
                 } else { // Boolean
-                    // Content should contain: AnswerIndex (0/1), then optionally Explanation.
-
                     if (contentLines.length < 1) {
                         errors.push(`Question ${index + 1}: Missing answer index for boolean.`);
                         return;
@@ -354,10 +436,8 @@ Explanation (Optional)</code>
                         return;
                     }
 
-                    // Map User Input: 0=True, 1=False (UI standard) -> JSON: 1=True, 0=False (App standard)
                     questionObj.answer = (rawAnswerIndex === 0) ? 1 : 0;
 
-                    // Explanation
                     if (contentLines.length > 1) {
                         questionObj.explanation = contentLines.slice(1).join(' ');
                     }
@@ -368,45 +448,88 @@ Explanation (Optional)</code>
             });
 
             if (errors.length > 0) {
-                showStatus(errors.join('\n'), 'error');
+                showStatus('builder-status', errors.join('\n'), 'error');
                 return;
             }
 
             let jsonString = JSON.stringify(jsonOutput, null, 2);
 
-            // If appending (ID > 0), strip array brackets to facilitate pasting into existing file
             if (startId > 0) {
-                // Remove first char [ and last char ]
-                // jsonString is roughly "[\n  {...}\n]"
-                // Slicing 1 to -1 usually works, then trim.
                 jsonString = jsonString.trim();
+                // Check if bracket stripping is appropriate.
+                // If the user wants to append, they paste a list of objects.
+                // Standard behavior: if StartID > 0, we strip outer brackets.
                 if (jsonString.startsWith('[') && jsonString.endsWith(']')) {
                     jsonString = jsonString.slice(1, -1).trim();
-                    // If stripping brackets breaks indentation visually for the first item, 
-                    // typically pasted content is auto-formatted by IDEs or doesn't matter much.
-                    // But we will trim it to ensure clean pasting.
-                    // Appending a comma might be useful, but the user said "[] are not required".
-                    // We'll leave it as objects comma-separated.
                 }
             }
 
             navigator.clipboard.writeText(jsonString).then(() => {
                 let msg = `Successfully generated ${jsonOutput.length} questions!\nJSON copied to clipboard.`;
                 if (startId > 0) {
-                    msg += `\n(Brackets [] removed for appending)`;
+                    msg += `\n(Brackets [] removed for appending, remember to add a comma after the last object)`;
                 }
-                showStatus(msg, 'success');
+                showStatus('builder-status', msg, 'success');
             }).catch(err => {
-                showStatus('Generated JSON but failed to copy automatically. See console.', 'error');
+                showStatus('builder-status', 'Generated JSON but failed to copy map. See console.', 'error');
                 console.error(err);
             });
         }
 
-        function showStatus(msg, type) {
-            const el = document.getElementById('status');
-            el.innerText = msg;
-            el.className = `status ${type}`; // resets to status + type
-            el.style.display = 'block';
+        // --- REORDER LOGIC ---
+        function clearReorderInput() {
+            document.getElementById('jsonInput').value = '';
+            const statusEl = document.getElementById('reorder-status');
+            statusEl.style.display = 'none';
+        }
+
+        function reorderIDs() {
+            const input = document.getElementById('jsonInput').value;
+            const statusEl = document.getElementById('reorder-status');
+            statusEl.style.display = 'none';
+            statusEl.className = 'status';
+
+            if (!input.trim()) {
+                showStatus('reorder-status', 'Please paste JSON array.', 'error');
+                return;
+            }
+
+            let questions;
+            try {
+                questions = JSON.parse(input);
+            } catch (e) {
+                showStatus('reorder-status', 'Invalid JSON syntax.', 'error');
+                return;
+            }
+
+            if (!Array.isArray(questions)) {
+                showStatus('reorder-status', 'Input must be a JSON array.', 'error');
+                return;
+            }
+
+            for (let i = 0; i < questions.length; i++) {
+                if (!questions[i].hasOwnProperty('id')) {
+                    showStatus('reorder-status', `Item at index ${i} is missing 'id'.`, 'error');
+                    return;
+                }
+            }
+
+            // Sort by current ID
+            questions.sort((a, b) => a.id - b.id);
+
+            // Renumber from 1
+            questions.forEach((q, index) => {
+                q.id = index + 1;
+            });
+
+            const jsonString = JSON.stringify(questions, null, 2);
+
+            navigator.clipboard.writeText(jsonString).then(() => {
+                showStatus('reorder-status', `Successfully reordered ${questions.length} questions!\nIDs reset to 1-${questions.length}.\nJSON copied to clipboard.`, 'success');
+            }).catch(err => {
+                console.error(err);
+                showStatus('reorder-status', 'Processed but copy failed.', 'error');
+            });
         }
     </script>
 
