Add review mode for wrong answers in quiz app
Introduces a 'Review Wrong' button to allow users to review only incorrectly answered questions after quiz completion. Updates app logic to support filtered review sessions, adjusts progress and navigation to reflect review subsets, and improves flagged question handling in review mode.

--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
                     <button class="btn btn-primary full-width" onclick="restartQuiz()">Try Again</button>
                     <button class="btn btn-secondary full-width" id="btnReviewAnswers" onclick="startReview()"
                         style="margin-top: 12px; display: none;">Review Answers</button>
+                    <button class="btn btn-secondary full-width" id="btnReviewWrong" onclick="startReview('wrong')"
+                        style="margin-top: 12px; display: none; background-color: #fee2e2; color: #ef4444; border-color: #fecaca;">Review
+                        Wrong (0)</button>
                     <button class="btn btn-ghost full-width" onclick="goHome()">Back to Home</button>
                 </div>
             </div>
