--- a/index.html
+++ b/index.html
@@ -230,13 +230,16 @@
                 </div>
 
                 <div class="results-actions">
-                    <button class="btn btn-primary full-width" onclick="restartQuiz()">Try Again</button>
-                    <button class="btn btn-secondary full-width" id="btnReviewAnswers" onclick="startReview()"
-                        style="margin-top: 12px; display: none;">Review Answers</button>
-                    <button class="btn btn-secondary full-width" id="btnReviewWrong" onclick="startReview('wrong')"
-                        style="margin-top: 12px; display: none; background-color: #fee2e2; color: #ef4444; border-color: #fecaca;">Review
-                        Wrong (0)</button>
-                    <button class="btn btn-ghost full-width" onclick="goHome()">Back to Home</button>
+                    <div class="primary-actions-grid">
+                        <div class="review-buttons-row">
+                            <button class="btn btn-secondary" id="btnReviewAnswers" onclick="startReview()">Review
+                                All</button>
+                            <button class="btn btn-secondary btn-soft-red" id="btnReviewWrong"
+                                onclick="startReview('wrong')">Review Wrong</button>
+                        </div>
+                        <button class="btn btn-primary full-width" onclick="restartQuiz()">Try Again</button>
+                    </div>
+                    <button class="btn btn-ghost full-width btn-home-bottom" onclick="goHome()">Back to Home</button>
                 </div>
             </div>
         </div>
